wallet contract fix
