# cmd/synced/docs/swagger.json
@@ -863,6 +863,42 @@
                 }
             }
         },
+        "/mcontract/delete/{id}": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "contract"
+                ],
+                "summary": "合约删除",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "合约Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/mcontract/download/sdk": {
             "get": {
                 "security": [
